--- a/Front-End/Front/package.json
+++ b/Front-End/Front/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^17.2.0",
     "@angular/platform-browser-dynamic": "^17.2.0",
     "@angular/router": "^17.2.0",
+    "bootstrap": "^5.3.3",
     "primeicons": "^7.0.0",
     "primeng": "^17.18.12",
     "rxjs": "~7.8.0",
